src/Hermes.Native.Linux/Exports.h

// ============================================================================
// Application Lifecycle
// ============================================================================

/// Initialize GTK (call once at startup)
void Hermes_App_Init(int* argc, char*** argv);
/// Run the GTK main loop
void Hermes_App_Run(void);
/// Quit the GTK main loop
void Hermes_App_Quit(void);
// ============================================================================
// Window Lifecycle
// ============================================================================

/// Create a new window with the specified parameters
void* Hermes_Window_Create(const HermesWindowParams* params);
/// Show the window
void Hermes_Window_Show(void* window);
/// Hide the window without closing it
void Hermes_Window_Hide(void* window);
/// Close the window
void Hermes_Window_Close(void* window);
/// Show the window and run the main loop until closed
void Hermes_Window_WaitForClose(void* window);
/// Destroy the window and release all resources
void Hermes_Window_Destroy(void* window);
// ============================================================================
// Window Properties - Getters
// ============================================================================

/// Get the window title (copies to buffer)
void Hermes_Window_GetTitle(void* window, char* buffer, int bufferSize);
/// Get the window size
void Hermes_Window_GetSize(void* window, int* width, int* height);
/// Get the window position (in screen coordinates)
void Hermes_Window_GetPosition(void* window, int* x, int* y);
/// Get whether the window is maximized
bool Hermes_Window_GetIsMaximized(void* window);
/// Get whether the window is minimized (iconified)
bool Hermes_Window_GetIsMinimized(void* window);
/// Get the UI thread ID
int64_t Hermes_Window_GetUIThreadId(void* window);
// ============================================================================
// Window Properties - Setters
// ============================================================================

/// Set the window title
void Hermes_Window_SetTitle(void* window, const char* title);
/// Set the window size
void Hermes_Window_SetSize(void* window, int width, int height);
/// Set the window position
void Hermes_Window_SetPosition(void* window, int x, int y);
/// Set whether the window is maximized
void Hermes_Window_SetIsMaximized(void* window, bool maximized);
/// Set whether the window is minimized (iconified)
void Hermes_Window_SetIsMinimized(void* window, bool minimized);
// ============================================================================
// WebView Operations
// ============================================================================

/// Navigate the WebView to a URL
void Hermes_Window_NavigateToUrl(void* window, const char* url);
/// Load HTML content directly into the WebView
void Hermes_Window_NavigateToString(void* window, const char* html);
/// Send a message to JavaScript in the WebView
void Hermes_Window_SendWebMessage(void* window, const char* message);
/// Register a custom URL scheme (must be called before window is shown)
void Hermes_Window_RegisterCustomScheme(void* window, const char* scheme);
/// Execute JavaScript in the WebView (fire-and-forget)
void Hermes_Window_RunJavascript(void* window, const char* script);
// ============================================================================
// Threading
// ============================================================================

/// Execute a callback on the UI thread synchronously (blocks until complete)
void Hermes_Window_Invoke(void* window, InvokeCallback callback);
/// Execute a callback on the UI thread asynchronously (returns immediately)
void Hermes_Window_BeginInvoke(void* window, InvokeCallback callback);
// ============================================================================
// Menu Operations
// ============================================================================

/// Create a menu backend for the window
void* Hermes_Menu_Create(void* window, MenuItemCallback callback);
/// Destroy the menu backend
void Hermes_Menu_Destroy(void* menu);
/// Hide the native menu bar widget (for custom titlebar mode)
void Hermes_Menu_Hide(void* menu);
/// Add a new top-level menu (insertIndex -1 appends)
void Hermes_Menu_AddMenu(void* menu, const char* label, int insertIndex);
/// Remove a top-level menu by label
void Hermes_Menu_RemoveMenu(void* menu, const char* label);
/// Add an item to a menu
void Hermes_Menu_AddItem(void* menu, const char* menuLabel, const char* itemId,
                         const char* itemLabel, const char* accelerator);
/// Insert an item after another item
void Hermes_Menu_InsertItem(void* menu, const char* menuLabel, const char* afterItemId,
                            const char* itemId, const char* itemLabel, const char* accelerator);
/// Remove an item from a menu
void Hermes_Menu_RemoveItem(void* menu, const char* menuLabel, const char* itemId);
/// Add a separator to a menu
void Hermes_Menu_AddSeparator(void* menu, const char* menuLabel);
/// Set whether a menu item is enabled
void Hermes_Menu_SetItemEnabled(void* menu, const char* menuLabel, const char* itemId, bool enabled);
/// Set whether a menu item is checked
void Hermes_Menu_SetItemChecked(void* menu, const char* menuLabel, const char* itemId, bool checked);
/// Set the label of a menu item
void Hermes_Menu_SetItemLabel(void* menu, const char* menuLabel, const char* itemId, const char* label);
/// Set the accelerator of a menu item
void Hermes_Menu_SetItemAccelerator(void* menu, const char* menuLabel, const char* itemId, const char* accelerator);
// ============================================================================
// Submenu Operations
// ============================================================================

/// Add a submenu to a menu
void Hermes_Menu_AddSubmenu(void* menu, const char* menuPath, const char* submenuLabel);
/// Add an item to a submenu
void Hermes_Menu_AddSubmenuItem(void* menu, const char* menuPath, const char* itemId,
                                const char* itemLabel, const char* accelerator);
/// Add a separator to a submenu
void Hermes_Menu_AddSubmenuSeparator(void* menu, const char* menuPath);
// ============================================================================
// Context Menu Operations
// ============================================================================

/// Create a context menu for the window
void* Hermes_ContextMenu_Create(void* window, MenuItemCallback callback);
/// Destroy the context menu
void Hermes_ContextMenu_Destroy(void* contextMenu);
/// Add an item to the context menu
void Hermes_ContextMenu_AddItem(void* contextMenu, const char* itemId, const char* label, const char* accelerator);
/// Add a separator to the context menu
void Hermes_ContextMenu_AddSeparator(void* contextMenu);
/// Remove an item from the context menu
void Hermes_ContextMenu_RemoveItem(void* contextMenu, const char* itemId);
/// Clear all items from the context menu
void Hermes_ContextMenu_Clear(void* contextMenu);
/// Set whether a context menu item is enabled
void Hermes_ContextMenu_SetItemEnabled(void* contextMenu, const char* itemId, bool enabled);
/// Set whether a context menu item is checked
void Hermes_ContextMenu_SetItemChecked(void* contextMenu, const char* itemId, bool checked);
/// Set the label of a context menu item
void Hermes_ContextMenu_SetItemLabel(void* contextMenu, const char* itemId, const char* label);
/// Show the context menu at the specified screen coordinates
void Hermes_ContextMenu_Show(void* contextMenu, int x, int y);
/// Hide the context menu
void Hermes_ContextMenu_Hide(void* contextMenu);
/// Create a status icon (system tray) with a menu callback
void* Hermes_StatusIcon_Create(MenuItemCallback menuCallback);
/// Destroy the status icon
void Hermes_StatusIcon_Destroy(void* statusIcon);
/// Show the status icon in the system tray
void Hermes_StatusIcon_Show(void* statusIcon);